force-app/main/default/objects/Contact/fields/Account_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_SF_ID__c</fullName>
    <formula>Account.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account SF ID</label>
    <type>Text</type>
</CustomField>