force-app/main/default/objects/Contact/fields/ACDF_12_Month_Sales_Volume__c.field-meta.xml
<CustomField>
    <fullName>ACDF_12_Month_Sales_Volume__c</fullName>
    <label>ACDF 12-Month Sales Volume</label>
    <length>250</length>
    <type>Text</type>
</CustomField>