force-app/main/default/objects/Contact/fields/ACDF_12_Month_Transaction__c.field-meta.xml
<CustomField>
    <fullName>ACDF_12_Month_Transaction__c</fullName>
    <label>ACDF 12-Month Transaction</label>
    <length>250</length>
    <type>Text</type>
</CustomField>