force-app/main/default/objects/Contact/fields/ACDF_36_Month_Transaction__c.field-meta.xml
<CustomField>
    <fullName>ACDF_36_Month_Transaction__c</fullName>
    <label>ACDF 36-Month Transaction</label>
    <length>250</length>
    <type>Text</type>
</CustomField>