force-app/main/default/objects/Contact/fields/ACDF_Accepting_New_Clients__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Accepting_New_Clients__c</fullName>
    <label>ACDF Accepting New Clients</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>