force-app/main/default/objects/Contact/fields/ACDF_Address_Type__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Address_Type__c</fullName>
    <label>ACDF Address Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>