force-app/main/default/objects/Contact/fields/ACDF_AUM__c.field-meta.xml
<CustomField>
    <fullName>ACDF_AUM__c</fullName>
    <label>ACDF AUM</label>
    <length>75</length>
    <type>Text</type>
</CustomField>