force-app/main/default/objects/Contact/fields/ACDF_Bankruptcy_Comments__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Bankruptcy_Comments__c</fullName>
    <label>ACDF Bankruptcy Comments</label>
    <type>TextArea</type>
</CustomField>