force-app/main/default/objects/Contact/fields/ACDF_Branch_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Branch_Manager_Email__c</fullName>
    <label>ACDF Branch Manager Email</label>
    <type>Email</type>
</CustomField>