force-app/main/default/objects/Contact/fields/ACDF_Branch_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Branch_Manager_Name__c</fullName>
    <label>ACDF Branch Manager Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>