force-app/main/default/objects/Contact/fields/ACDF_Branch_Office__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Branch_Office__c</fullName>
    <description>This is normalized company field to be used for the client.</description>
    <inlineHelpText>This is the official company field to be used in the index.</inlineHelpText>
    <label>Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>