force-app/main/default/objects/Contact/fields/ACDF_BRP_Interest__c.field-meta.xml
<CustomField>
    <fullName>ACDF_BRP_Interest__c</fullName>
    <label>ACDF BRP Interest</label>
    <length>250</length>
    <type>Text</type>
</CustomField>