force-app/main/default/objects/Contact/fields/ACDF_Certification_Comments__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Certification_Comments__c</fullName>
    <label>ACDF Certification Comments</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>