force-app/main/default/objects/Contact/fields/ACDF_Certification_Contact_Preference__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Certification_Contact_Preference__c</fullName>
    <label>ACDF Certification Contact Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Please send my appointment invitation by email.</fullName>
            </value>
            <value>
                <fullName>Please send my appointment invitation by text.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>