force-app/main/default/objects/Contact/fields/ACDF_City__c.field-meta.xml
<CustomField>
    <fullName>ACDF_City__c</fullName>
    <label>ACDF City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>