force-app/main/default/objects/Contact/fields/ACDF_City_of_Focus__c.field-meta.xml
<CustomField>
    <fullName>ACDF_City_of_Focus__c</fullName>
    <label>ACDF City of Focus</label>
    <length>50</length>
    <type>Text</type>
</CustomField>