force-app/main/default/objects/Contact/fields/ACDF_Client_Retention_1_Year__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Client_Retention_1_Year__c</fullName>
    <label>ACDF Client Retention - 1 Year</label>
    <length>20</length>
    <type>Text</type>
</CustomField>