force-app/main/default/objects/Contact/fields/ACDF_Company_Address_1__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Company_Address_1__c</fullName>
    <label>ACDF Company Address 1</label>
    <length>250</length>
    <type>Text</type>
</CustomField>