force-app/main/default/objects/Contact/fields/ACDF_Company_Address_2__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Company_Address_2__c</fullName>
    <label>ACDF Company Address 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>