force-app/main/default/objects/Contact/fields/ACDF_Contact_Info_Verification__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Contact_Info_Verification__c</fullName>
    <label>ACDF Contact Info Verification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>