force-app/main/default/objects/Contact/fields/ACDF_Designations__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Designations__c</fullName>
    <label>ACDF Designations</label>
    <length>250</length>
    <type>Text</type>
</CustomField>