force-app/main/default/objects/Contact/fields/ACDF_Email__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Email__c</fullName>
    <label>ACDF Email</label>
    <type>Email</type>
</CustomField>