force-app/main/default/objects/Contact/fields/ACDF_Facebook__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Facebook__c</fullName>
    <label>ACDF Facebook</label>
    <length>75</length>
    <type>Text</type>
</CustomField>