force-app/main/default/objects/Contact/fields/ACDF_Fax__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Fax__c</fullName>
    <label>ACDF Fax</label>
    <type>Phone</type>
</CustomField>