force-app/main/default/objects/Contact/fields/ACDF_Firm_CRD__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Firm_CRD__c</fullName>
    <label>ACDF Firm CRD</label>
    <length>25</length>
    <type>Text</type>
</CustomField>