force-app/main/default/objects/Contact/fields/ACDF_FName__c.field-meta.xml
<CustomField>
    <fullName>ACDF_FName__c</fullName>
    <label>ACDF FName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>