force-app/main/default/objects/Contact/fields/ACDF_Highest_Level_of_Ed__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Highest_Level_of_Ed__c</fullName>
    <label>ACDF Highest Level of Ed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High School</fullName>
            </value>
            <value>
                <fullName>Some College</fullName>
            </value>
            <value>
                <fullName>Associates Degree</fullName>
            </value>
            <value>
                <fullName>Bachelors Degree</fullName>
            </value>
            <value>
                <fullName>Master Degree or Higher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>