force-app/main/default/objects/Contact/fields/ACDF_I_Certify__c.field-meta.xml
<CustomField>
    <fullName>ACDF_I_Certify__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACDF I Certify</label>
    <type>Checkbox</type>
</CustomField>