force-app/main/default/objects/Contact/fields/ACDF_Individual_Contribution_Comments__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Individual_Contribution_Comments__c</fullName>
    <label>ACDF Individual Contribution Comments</label>
    <type>TextArea</type>
</CustomField>