force-app/main/default/objects/Contact/fields/ACDF_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Last_Update__c</fullName>
    <label>ACDF Last Update</label>
    <type>Date</type>
</CustomField>