force-app/main/default/objects/Contact/fields/ACDF_Lic_Type__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Lic_Type__c</fullName>
    <label>ACDF Lic Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>