force-app/main/default/objects/Contact/fields/ACDF_License_Disciplinary_Verification__c.field-meta.xml
<CustomField>
    <fullName>ACDF_License_Disciplinary_Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACDF License / Disciplinary Verification</label>
    <type>Checkbox</type>
</CustomField>