force-app/main/default/objects/Contact/fields/ACDF_LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>ACDF_LinkedIn__c</fullName>
    <label>ACDF LinkedIn</label>
    <length>100</length>
    <type>Text</type>
</CustomField>