force-app/main/default/objects/Contact/fields/ACDF_LName__c.field-meta.xml
<CustomField>
    <fullName>ACDF_LName__c</fullName>
    <label>ACDF LName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>