force-app/main/default/objects/Contact/fields/ACDF_M_Name__c.field-meta.xml
<CustomField>
    <fullName>ACDF_M_Name__c</fullName>
    <label>ACDF M Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>