force-app/main/default/objects/Contact/fields/ACDF_Mobile__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Mobile__c</fullName>
    <label>ACDF Mobile</label>
    <type>Phone</type>
</CustomField>