force-app/main/default/objects/Contact/fields/ACDF_Months_Active__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Months_Active__c</fullName>
    <label>ACDF Months Active</label>
    <length>25</length>
    <type>Text</type>
</CustomField>