force-app/main/default/objects/Contact/fields/ACDF_of_Client_HH__c.field-meta.xml
<CustomField>
    <fullName>ACDF_of_Client_HH__c</fullName>
    <label>ACDF # of Client HH</label>
    <length>150</length>
    <type>Text</type>
</CustomField>