force-app/main/default/objects/Contact/fields/ACDF_of_Customer_Complaints__c.field-meta.xml
<CustomField>
    <fullName>ACDF_of_Customer_Complaints__c</fullName>
    <label>ACDF # of Customer Complaints</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3 or more</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>