force-app/main/default/objects/Contact/fields/ACDF_Phone__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Phone__c</fullName>
    <label>ACDF Phone</label>
    <type>Phone</type>
</CustomField>