force-app/main/default/objects/Contact/fields/ACDF_Phone_Ext__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Phone_Ext__c</fullName>
    <label>ACDF Phone Ext.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>