force-app/main/default/objects/Contact/fields/ACDF_Preferred_Name__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Preferred_Name__c</fullName>
    <label>ACDF Preferred Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>