force-app/main/default/objects/Contact/fields/ACDF_Pro_Bono_Community_Service__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Pro_Bono_Community_Service__c</fullName>
    <label>ACDF Pro Bono/Community Service</label>
    <type>TextArea</type>
</CustomField>