force-app/main/default/objects/Contact/fields/ACDF_Purchase_Interest__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Purchase_Interest__c</fullName>
    <label>ACDF Purchase Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>