force-app/main/default/objects/Contact/fields/ACDF_Regulatory_Action_Comments__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Regulatory_Action_Comments__c</fullName>
    <label>ACDF Regulatory Action Comments</label>
    <type>TextArea</type>
</CustomField>