force-app/main/default/objects/Contact/fields/ACDF_RIA_Broker_Dealer__c.field-meta.xml
<CustomField>
    <fullName>ACDF_RIA_Broker_Dealer__c</fullName>
    <label>ACDF Parent Company</label>
    <length>150</length>
    <type>Text</type>
</CustomField>