force-app/main/default/objects/Contact/fields/ACDF_State__c.field-meta.xml
<CustomField>
    <fullName>ACDF_State__c</fullName>
    <label>ACDF State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>