force-app/main/default/objects/Contact/fields/ACDF_Subject_to_Regulatory_Action__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Subject_to_Regulatory_Action__c</fullName>
    <label>ACDF Subject to Regulatory Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>