force-app/main/default/objects/Contact/fields/ACDF_Title__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Title__c</fullName>
    <label>ACDF Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>