force-app/main/default/objects/Contact/fields/ACDF_Twitter__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Twitter__c</fullName>
    <label>ACDF Twitter</label>
    <length>100</length>
    <type>Text</type>
</CustomField>