force-app/main/default/objects/Contact/fields/ACDF_Website__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Website__c</fullName>
    <label>ACDF Website</label>
    <type>Url</type>
</CustomField>