force-app/main/default/objects/Contact/fields/ACDF_Zip__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Zip__c</fullName>
    <label>ACDF Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>