force-app/main/default/objects/Contact/fields/Active_Order__c.field-meta.xml
<CustomField>
    <fullName>Active_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This client has an active order with outstanding payments. This field is used as a flag in the deduping process to alert Research.</description>
    <inlineHelpText>This client has an active order with outstanding payments. This field is used as a flag in the deduping process to alert Research.</inlineHelpText>
    <label>Active Order</label>
    <type>Checkbox</type>
</CustomField>