force-app/main/default/objects/Contact/fields/AM_Client_Check_In_Link__c.field-meta.xml
<CustomField>
    <fullName>AM_Client_Check_In_Link__c</fullName>
    <formula>&quot;http://fivestarprofessional.force.com/SelfScheduling/forcebrain__LeadRegistration?ProcessId=a2Z0W000006FSmpUAG&amp;PId=&quot;+ Owner.Provider_ID__c +&quot;&amp;ContactID=&quot;+Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Client Check In Link</label>
    <type>Text</type>
</CustomField>