force-app/main/default/objects/Contact/fields/AM_ELM_Follow_Up_Link__c.field-meta.xml
<CustomField>
    <fullName>AM_ELM_Follow_Up_Link__c</fullName>
    <description>Essential Living Magazine Appointment for Marketing Cloud</description>
    <formula>&quot;http://fivestarprofessional.force.com/SelfScheduling/forcebrain__LeadRegistration?ProcessId=a2Z6T000006FwZqUAK&amp;PId=&quot;+ Owner.Provider_ID__c +&quot;&amp;ContactID=&quot;+Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Essential Living Magazine 15 Minutes Appointment for Marketing Cloud</inlineHelpText>
    <label>AM ELM Follow Up Link</label>
    <type>Text</type>
</CustomField>