force-app/main/default/objects/Contact/fields/AM_Follow_Up_Link__c.field-meta.xml
<CustomField>
    <fullName>AM_Follow_Up_Link__c</fullName>
    <description>Merges together follow up link with provider ID and Contact ID for correct link</description>
    <formula>IF(
$User.Salesforce_ID__c &lt;&gt; &quot;0050W000006qj5vQAA&quot;,
&quot;http://fivestarprofessional.force.com/SelfScheduling/forcebrain__LeadRegistration?ProcessId=a2Z0W000001hYliUAE&amp;PId=&quot;+  Owner.Provider_ID__c +&quot;&amp;ContactID=&quot;+Id,
&quot;CEP: https://fivestarprofessional-experience.force.com/s/onlinescheduler?processId=a5F0W000001iS77UAE&amp;whoId=&quot;+ OwnerId +&quot;&amp;clientId=&quot;+Id +&quot; &quot;+br()+br()+
&quot;v5: http://fivestarprofessional.force.com/SelfScheduling/forcebrain__LeadRegistration?ProcessId=a2Z0W000001hYliUAE&amp;PId=&quot;+  Owner.Provider_ID__c +&quot;&amp;ContactID=&quot;+Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Follow Up Link</label>
    <type>Text</type>
</CustomField>