force-app/main/default/objects/Contact/fields/AM_link__c.field-meta.xml
<CustomField>
    <fullName>AM_link__c</fullName>
    <formula>Owner.SUMO_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM link</label>
    <type>Text</type>
</CustomField>