force-app/main/default/objects/Contact/fields/AM_MLSS_Follow_Up_Link__c.field-meta.xml
<CustomField>
    <fullName>AM_MLSS_Follow_Up_Link__c</fullName>
    <formula>&quot;http://fivestarprofessional.force.com/SelfScheduling/forcebrain__LeadRegistration?ProcessId=a2Z6T000006G8t5UAC&amp;PId=&quot;+ Owner.Provider_ID__c +&quot;&amp;ContactID=&quot;+Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM MLSS Follow Up Link</label>
    <type>Text</type>
</CustomField>