force-app/main/default/objects/Contact/fields/AM_Postcards_Follow_Up_Link__c.field-meta.xml
<CustomField>
    <fullName>AM_Postcards_Follow_Up_Link__c</fullName>
    <formula>&quot;http://fivestarprofessional.force.com/SelfScheduling/forcebrain__LeadRegistration?ProcessId=a2Z6T000006G8s2UAC&amp;PId=&quot;+ Owner.Provider_ID__c +&quot;&amp;ContactID=&quot;+Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Postcards Follow Up Link</label>
    <type>Text</type>
</CustomField>