force-app/main/default/objects/Contact/fields/AM_SMM_Follow_Up_Link__c.field-meta.xml
<CustomField>
    <fullName>AM_SMM_Follow_Up_Link__c</fullName>
    <formula>&quot;https://fivestarprofessional-experience.force.com/s/onlinescheduler?processId=a5F6T0000030K5dUAE&amp;whoId=&quot;+ OwnerId +&quot;&amp;clientId=&quot;+Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM SMM Follow Up Link</label>
    <type>Text</type>
</CustomField>