force-app/main/default/objects/Contact/fields/AM_WIW_SS_Follow_Up_Link__c.field-meta.xml
<CustomField>
    <fullName>AM_WIW_SS_Follow_Up_Link__c</fullName>
    <description>GT changed API name to match field name on 5/19/21.  Original API name was AM_   I document, therefor I am.</description>
    <formula>&quot;https://fivestarprofessional-experience.force.com/s/onlinescheduler?processId=a5F6T000002yisYUAQ&amp;whoId=&quot;+ OwnerId +&quot;&amp;clientId=&quot;+Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM WIW SS Follow Up Link</label>
    <type>Text</type>
</CustomField>