force-app/main/default/objects/Contact/fields/Assistant__c.field-meta.xml
<CustomField>
    <fullName>Assistant__c</fullName>
    <label>Assistant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>