force-app/main/default/objects/Contact/fields/Assistant_Extension__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Extension__c</fullName>
    <label>Assistant Extension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>