force-app/main/default/objects/Contact/fields/Assistant_Phone__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Phone__c</fullName>
    <label>Assistant Phone</label>
    <type>Phone</type>
</CustomField>