force-app/main/default/objects/Contact/fields/Auto_CSR_Advance_Completed__c.field-meta.xml
<CustomField>
    <fullName>Auto_CSR_Advance_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not on page layouts

Used as a flag to stop the CSR date advance automation from firing multiple times if an order is unreleased and re released.</description>
    <inlineHelpText>If you can see this field notify an admin, it should not be on any page layouts.</inlineHelpText>
    <label>Auto CSR Advance Completed</label>
    <type>Checkbox</type>
</CustomField>