force-app/main/default/objects/Contact/fields/Billing_Zip__c.field-meta.xml
<CustomField>
    <fullName>Billing_Zip__c</fullName>
    <label>Office Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>