force-app/main/default/objects/Contact/fields/Branch_Manager__c.field-meta.xml
<CustomField>
    <fullName>Branch_Manager__c</fullName>
    <label>Branch Manager</label>
    <length>100</length>
    <type>Text</type>
</CustomField>