force-app/main/default/objects/Contact/fields/Branch_Office_Aka_Company__c.field-meta.xml
<CustomField>
    <fullName>Branch_Office_Aka_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the local office the professional works out of primarily.</description>
    <label>RETIRED: Branch Office Aka Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Professionals</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>