force-app/main/default/objects/Contact/fields/Business_Dev_Rep__c.field-meta.xml
<CustomField>
    <fullName>Business_Dev_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BDR assigned to this client.</description>
    <label>Business Development Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>