force-app/main/default/objects/Contact/fields/Call_Assistant__c.field-meta.xml
<CustomField>
    <fullName>Call_Assistant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Assistant</label>
    <type>Checkbox</type>
</CustomField>