force-app/main/default/objects/Contact/fields/Call_Request__c.field-meta.xml
<CustomField>
    <fullName>Call_Request__c</fullName>
    <label>Call Request</label>
    <type>Date</type>
</CustomField>