force-app/main/default/objects/Contact/fields/Call_Request_Time__c.field-meta.xml
<CustomField>
    <fullName>Call_Request_Time__c</fullName>
    <label>Call Request Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>