force-app/main/default/objects/Contact/fields/Central_Compliance_Contact__c.field-meta.xml
<CustomField>
    <fullName>Central_Compliance_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate contact is a Live Compliance dept. contact used for firm reviews</description>
    <label>Central Compliance Contact</label>
    <type>Checkbox</type>
</CustomField>