force-app/main/default/objects/Contact/fields/Central_Contact__c.field-meta.xml
<CustomField>
    <fullName>Central_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Research/ACDF main contact info</inlineHelpText>
    <label>Central Contact</label>
    <type>Checkbox</type>
</CustomField>