force-app/main/default/objects/Contact/fields/Central_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Central_Contact_Email__c</fullName>
    <label>Central Contact Email</label>
    <type>Email</type>
</CustomField>