force-app/main/default/objects/Contact/fields/Central_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Central_Contact_Name__c</fullName>
    <label>Central Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>