force-app/main/default/objects/Contact/fields/Central_Contact_Note__c.field-meta.xml
<CustomField>
    <fullName>Central_Contact_Note__c</fullName>
    <label>Central Contact Note</label>
    <type>TextArea</type>
</CustomField>