force-app/main/default/objects/Contact/fields/Central_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Central_Contact_Phone__c</fullName>
    <label>Central Contact Phone</label>
    <type>Phone</type>
</CustomField>