force-app/main/default/objects/Contact/fields/Certification_Link__c.field-meta.xml
<CustomField>
    <fullName>Certification_Link__c</fullName>
    <formula>Market_Project__r.Award_Guide__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certification Link</label>
    <type>Text</type>
</CustomField>