force-app/main/default/objects/Contact/fields/Client_Success_Tracker_URL__c.field-meta.xml
<CustomField>
    <fullName>Client_Success_Tracker_URL__c</fullName>
    <label>Client Success Tracker URL</label>
    <type>Url</type>
</CustomField>